--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^6.6.0",
     "eslint": "^9.20.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "file-loader": "^6.2.0",
     "globals": "^15.15.0",
@@ -31,6 +32,10 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^16.14.1",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-order": "^6.0.4",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
