--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "lint": "eslint . --config=eslint.config.mjs",
     "lint:fix": "npm run lint -- --fix",
     "lint:scss": "npx stylelint **/*.scss",
-    "lint:scss:fix": "npx stylelint **/*.scss --fix"
+    "lint:scss:fix": "npx stylelint **/*.scss --fix",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.20.0",
     "@svgr/webpack": "^6.2.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "babel-jest": "^29.7.0",
     "css-loader": "^6.6.0",
     "eslint": "^9.20.1",
     "eslint-plugin-import": "^2.31.0",
@@ -30,6 +35,7 @@
     "file-loader": "^6.2.0",
     "globals": "^15.15.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
