--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "typescript-eslint": "^8.24.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "@types/webpack-bundle-analyzer": "^4.4.1"
   },
   "dependencies": {
     "i18next": "^21.6.11",
