--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.20.0",
     "@svgr/webpack": "^6.2.1",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "babel-jest": "^29.7.0",
     "css-loader": "^6.6.0",
     "eslint": "^9.20.1",
@@ -36,6 +39,7 @@
     "globals": "^15.15.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
+    "identity-obj-proxy": "^3.0.0",
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
