--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint:fix": "npm run lint -- --fix",
     "lint:scss": "npx stylelint **/*.scss",
     "lint:scss:fix": "npx stylelint **/*.scss --fix",
-    "unit": "jest --config config/jest/jest.config.ts"
+    "unit": "jest --config config/jest/jest.config.ts",
+    "storybook": "storybook dev -p 6006 --config-dir config/storybook",
+    "build-storybook": "storybook build --config-dir config/storybook"
   },
   "keywords": [],
   "author": "",
@@ -19,30 +21,43 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.26.0",
+    "@chromatic-com/storybook": "^3.2.5",
     "@eslint/js": "^9.20.0",
+    "@storybook/addon-essentials": "^8.6.4",
+    "@storybook/addon-interactions": "^8.6.4",
+    "@storybook/addon-onboarding": "^8.6.4",
+    "@storybook/addon-styling-webpack": "^1.0.1",
+    "@storybook/addon-webpack5-compiler-swc": "^2.1.0",
+    "@storybook/blocks": "^8.6.4",
+    "@storybook/react": "^8.6.4",
+    "@storybook/react-webpack5": "^8.6.4",
+    "@storybook/test": "^8.6.4",
     "@svgr/webpack": "^6.2.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
     "babel-jest": "^29.7.0",
     "css-loader": "^6.6.0",
     "eslint": "^9.20.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-storybook": "^0.11.4",
     "file-loader": "^6.2.0",
     "globals": "^15.15.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.5.1",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "storybook": "^8.6.4",
     "style-loader": "^3.3.1",
     "stylelint": "^16.14.1",
     "stylelint-config-recess-order": "^6.0.0",
@@ -53,12 +68,12 @@
     "typescript": "^4.5.5",
     "typescript-eslint": "^8.24.1",
     "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
     "webpack-bundle-analyzer": "^4.5.0",
-    "@types/webpack-bundle-analyzer": "^4.4.1"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@storybook/addon-themes": "^8.6.4",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
@@ -66,5 +81,10 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-router-dom": "^6.2.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
