refactor: added loki screen test

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint:scss:fix": "npx stylelint **/*.scss --fix",
     "unit": "jest --config config/jest/jest.config.ts",
     "storybook": "storybook dev -p 6006 --config-dir config/storybook",
-    "build-storybook": "storybook build --config-dir config/storybook"
+    "build-storybook": "storybook build --config-dir config/storybook",
+    "test:ui": "npx loki test",
+    "test:ui:ok": "npx loki approve"
   },
   "keywords": [],
   "author": "",
@@ -54,6 +56,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "loki": "^0.35.1",
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
@@ -86,5 +89,22 @@
     "extends": [
       "plugin:storybook/recommended"
     ]
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.app",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false,
+        "chromeTimeout": 30000
+      },
+      "chrome.iphone7": {
+        "target": "chrome.app",
+        "preset": "iPhone 7",
+        "chromeTimeout": 30000
+      }
+    }
   }
 }
