--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Clean npm cache
+        run: npm cache clean --force
+        
+
       - name: Cache node modules
         id: cache-node-modules
         uses: actions/cache@v3
