--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Clean npm cache
         run: npm cache clean --force
-        
+
+      - name: Debug file structure
+        run: find src/widgets
 
       - name: Cache node modules
         id: cache-node-modules
