--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         run: npm run unit
 
       - name: build storybook
-        run: npm run build:storybook
+        run: npm run build-storybook
 
       - name: screenshot test
         run: npm run test:ui:ci
