--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:scss:fix": "npx stylelint **/*.scss --fix",
     "unit": "jest --config config/jest/jest.config.ts",
     "storybook": "storybook dev -p 6006 --config-dir config/storybook",
-    "build:storybook": "storybook build --config-dir config/storybook",
+    "build-storybook": "storybook build --config-dir config/storybook",
     "test:ui": "npx loki --chromeConcurrency 1 test",
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "loki --requireReference --reactUri file:./storybook-static"
