--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build-storybook": "storybook build --config-dir config/storybook",
     "test:ui": "npx loki --chromeConcurrency 1 test",
     "test:ui:ok": "npx loki approve",
-    "test:ui:ci": "loki --requireReference --reactUri file:./storybook-static"
+    "test:ui:ci": "build-storybook && loki --requireReference --reactUri file:./storybook-static"
   },
   "keywords": [],
   "author": "",
