--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^9.20.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^0.11.4",
     "file-loader": "^6.2.0",
     "globals": "^15.15.0",
